--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -90,9 +90,28 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "fsqhn",
+      "name": "fsqhn",
+      "avatar_url": "https://avatars.githubusercontent.com/u/13745793?v=4",
+      "profile": "https://github.com/fsqhn",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Zyy955",
+      "name": "Zyy955",
+      "avatar_url": "https://avatars.githubusercontent.com/u/74231782?v=4",
+      "profile": "https://github.com/Zyy955",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
   "skipCi": true,
-  "linkToUsage": false
+  "linkToUsage": false,
+  "commitType": "docs"
 }
