feat：bot名称加入随机渐变色，需自定义请查看本次提交详情
前往`plugins\yenai-plugin\config\default_config\state.yaml`
将Gradient键值复制到`plugins\yenai-plugin\config\config\state.yaml`

--- a/config/default_config/state.yaml
+++ b/config/default_config/state.yaml
@@ -22,3 +22,8 @@ backdrop: ""
 
 # 本体自定义头像 可填入url和本地路径
 YZAvatar: ""
+
+# 渐变色
+Gradient:
+  - '#5ce2e2, #ea85f7' # 蓝紫渐变
+  - '#ea85f7, #5ce2e2' # 紫蓝渐变
